--- a/20251118_prawko.html
+++ b/20251118_prawko.html
@@ -523,6 +523,226 @@ const questions = [
         img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656504/12-82_wxzyqz.png",
         q: "Kierujesz samochodem ciężarowym o dopuszczalnej masie całkowitej nie przekraczającej 3,5 tony. Czy w przedstawionej sytuacji wolno Ci wyprzedzić samochód osobowy?",
         correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763747449/13-8_m11z4x.png",
+        q: "Czy możesz cofać pojazdem na drodze jednokierunkowej?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763747532/13-11_mxocuq.png",
+        q: "Czy w tej sytuacji wykonałeś manewr omijania?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763747670/14-1_nc4sgd.png",
+        q: "Czy masz prawo używać świateł do jazdy dziennej, gdy jedziesz po zmierzchu dobrze oświetloną drogą?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763747746/14-4_wjlj01.png",
+        q: "Czy w tej sytuacji masz prawo użyć sygnału dźwiękowego?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763747810/14-8_g5fjcj.png",
+        q: "Czy masz prawo włączyć światła awaryjne, gdy kierujesz holowanym pojazdem?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763747864/14-18_tgt2js.png",
+        q: "Czy stojąc przez kilka minut bez ruchu w zatorze drogowym (korku), pomiędzy innymi pojazdami na tym samym pasie ruchu, masz prawo wyłączyć światła?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763747943/14-19_dxetgw.png",
+        q: "Czy w tej sytuacji wolno Ci jechać pojazdem z włączonymi światłami przeciwmgłowymi?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748016/14-21_ja5uny.png",
+        q: "Czy w tej sytuacji wolno Ci użyć ostrzegawczego sygnału dźwiękowego?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748094/14-29_aywds6.png",
+        q: "Czy w tej sytuacji masz prawo użyć sygnału dźwiękowego, aby ostrzec pieszego o niebezpieczeństwie?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748153/14-33_pnydze.png",
+        q: "Czy kierując pojazdem od zmierzchu do świtu masz obowiązek stale zachowywać szczególną ostrożność?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748226/14-48_lixbyy.png",
+        q: "Czy w tej sytuacji zachowanie pieszego wymaga, abyś użył sygnału dźwiękowego?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748306/14-50_idg4ls.png",
+        q: "Czy w tej sytuacji masz prawo użyć sygnału dźwiękowego, aby ostrzec pieszego o niebezpieczeństwie?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748377/14-57_arued1.png",
+        q: "Czy masz prawo używać świateł przeciwmgłowych tylnych, jeżeli mgła ogranicza widoczność na odległość 100 m?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748446/14-62_lbn6ip.png",
+        q: "Czy podczas wyprzedzania rowerzysty, w warunkach zmniejszonej przejrzystości powietrza, poza obszarem zabudowanym, powinieneś używać krótkotrwałych sygnałów dźwiękowych?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748802/15-7_vhcpl7.png",
+        q: "Czy kierując pojazdem w strefie zamieszkania masz obowiązek stale zachowywać szczególną ostrożność?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748879/15-8_kkpd0c.png",
+        q: "Czy w tej sytuacji masz obowiązek zachować szczególną ostrożność?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763748992/15-18_myx6nj.png",
+        q: "Czy w tej sytuacji wystarczy, że zachowasz wyłącznie szczególną ostrożność?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763749101/15-20_mivoaw.png",
+        q: "Czy w tej sytuacji masz prawo wjechać na przejazd kolejowy z zachowaniem szczególnej ostrożności?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763749175/15-21_mumycs.png",
+        q: "Czy na najbliższym zakręcie wolno Ci wyprzedzić ten pojazd z prawej strony?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763749248/15-26_sel3cb.png",
+        q: "Czy w tej sytuacji masz obowiązek zachować jedynie ostrożność?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763749321/15-28_fbpeca.png",
+        q: "Czy przejeżdżając obok tego przystanku tramwajowego, masz obowiązek zachować szczególną ostrożność?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763750340/15-37_gjqo2x.png",
+        q: "Czy w przedstawionej sytuacji masz obowiązek zachować szczególną ostrożność?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763750412/15-40_rv3lkl.png",
+        q: "Czy w widocznej sytuacji masz obowiązek zachować szczególną ostrożność?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763750495/15-57_bu8zf4.png",
+        q: "Czy podczas kierowania pojazdem masz obowiązek stale zachowywać ostrożność?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763750558/15-71_e2jdgh.png",
+        q: "Czy w tej sytuacji musisz zachować szczególną ostrożność?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763750627/16-2_mxaser.png",
+        q: "Czy podczas przewożenia osoby niepełnosprawnej legitymującej się kartą parkingową, karta ta powinna znajdować się za dowolną szybą pojazdu samochodowego?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763750732/16-3_ubese8.png",
+        q: "Czy w przedstawionej sytuacji masz obowiązek ustąpić pierwszeństwa pieszemu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763750789/16-18_bnqzi0.png",
+        q: "Czy przewożąc samochodem osobowym każdego pasażera o ograniczonej sprawności ruchowej, jesteś zwolniony z obowiązku stosowania się do widocznego znaku zakazu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763900628/16-42_srvo9x.png",
+        q: "Czy na tej drodze zawsze masz obowiązek ustąpić pierwszeństwa pieszemu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763900709/16-54_vumzrw.png",
+        q: "Czy w tej sytuacji masz obowiązek zatrzymać pojazd, aby umożliwić pieszemu przejście przez jezdnię?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763900830/17-14_kgywcq.png",
+        q: "Czy w tej sytuacji możesz przejechać obok rowerzysty z prawej strony?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763900887/18-4_lyfpuk.png",
+        q: "Czy masz obowiązek zatrzymać się w wyznaczonym miejscu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763900955/18-11_hzi7zi.png",
+        q: "Czy masz obowiązek ustąpić pierwszeństwa pojazdowi szynowemu, który wyjeżdża z pętli?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901035/18-14_g65mr3.png",
+        q: "Zamierzasz skręcić w lewo. Czy masz pierwszeństwo przed pojazdem szynowym nadjeżdżającym z przeciwka?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901114/18-15_xq9ypa.png",
+        q: "Zamierzasz jechać na wprost, a kierujący tramwajem planuje skręcić w lewo. Czy masz przed nim pierwszeństwo?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901203/18-35_akmwmr.png",
+        q: "Czy w tej sytuacji, chcąc kontynuować jazdę w lewo za przejazdem, powinieneś zatrzymać się przed półzaporą?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901269/19-2_uwpxga.png",
+        q: "Czy wszyscy kierujący w sposób właściwy zapewniają swobodny przejazd pojazdu uprzywilejowanego ?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901324/19-4_sgmosx.png",
+        q: "Czy w przedstawionej sytuacji kierujący zespołem pojazdów nr 1 zachował się właściwie?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901391/19-11_cctawo.png",
+        q: "Czy w przedstawionej sytuacji możesz wyprzedzić pojazd z prawej strony?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901447/19-18_lt4xzl.png",
+        q: "Czy po zatrzymaniu pojazdu do kontroli, kierujący pojazdem powinien trzymać ręce na kierownicy?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901524/19-25_kpw1r9.png",
+        q: "Czy jako uczestnik wypadku drogowego, w którym nie ma zabitych lub rannych, masz obowiązek niezwłocznie usunąć pojazd z miejsca zdarzenia?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901582/19-27_zhgsxh.png",
+        q: "Czy w tej sytuacji masz obowiązek sygnalizować postój widocznego z dostatecznej odległości, uszkodzonego pojazdu, na drodze, która nie jest drogą ekspresową?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901643/19-33_m9jpgk.png",
+        q: "Czy kierujący pojazdami w sposób właściwy umożliwili swobodny przejazd pojazdu uprzywilejowanego?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763901694/19-75_ly70fi.png",
+        q: "Czy wolno Ci położyć bezpośrednio na ranę kompres z wyjałowionej gazy?",
+        correct: "tak"
     }
 ];
     
