--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -15,6 +15,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251118_pracownicy.html">Nasz zespół</a></td></tr>
 <tr><td></td><td><a href="20251106_index.html">Fryzjerstwo</a></td></tr>
 <tr><td></td><td><a href="20251028_obrazki.html">Obrazki</a></td></tr>
 <tr><td></td><td><a href="20251023_index.html">Hurtownia</a></td></tr>
@@ -28,6 +29,8 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251125_tabelkaspr.html">Sprawdzian</a></td></tr>
+<tr><td></td><td><a href="20251125_tabelka4.html">Tabele 4</a></td></tr>
 <tr><td></td><td><a href="20251118_tabelka3.html">Tabele 3</a></td></tr>
 <tr><td></td><td><a href="20251104_tabelka2.html">Tabele 2</a></td></tr>
 <tr><td></td><td><a href="20251104_tabelka.html">Tabele 1</a></td></tr>
