--- a/20251125_tabelka4.html
+++ b/20251125_tabelka4.html
@@ -15,6 +15,14 @@
             height: 100vh;
             margin: 0;
         }
+
+        /* Kontener pozwala przewijać tabelę poziomo na telefonie */
+        .table-container{
+            width: 100%;
+            overflow-x: auto;
+            padding: 10px;
+        }
+
         table{
             border-collapse: collapse;
             min-width: 600px;
@@ -22,42 +30,54 @@
             backdrop-filter: blur(6px);
             overflow: hidden;
             box-shadow: 0 0 25px rgba(0,0,0,0.35);
+            margin: auto;
         }
+
         th, td{
             padding: 15px 20px;
             text-align: center;
             font-size: 18px;
             border: 1px solid rgba(255, 255, 255, 0.25);
         }
+
         th{
             background: linear-gradient(135deg, #4b0082, #8000ff);
             color: #ffe96c;
             font-weight: 600;
             letter-spacing: 1px;
         }
+
         td{
             background: rgba(0, 255, 255, 0.08);
             color: #ff4d4d;
         }
+
         td:hover, th:hover{
             background: rgba(255, 255, 255, 0.15);
             cursor: pointer;
             transition: 0.25s ease-in-out;
         }
+
+        /* TELEFON */
         @media (max-width: 600px){
-            table{
-                max-width: 300px;
+            th, td {
+                padding: 10px;
+                font-size: 15px;
             }
         }
     </style>
 </head>
 <body>
-    <table>
-        <tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td></tr>
-        <tr><th rowspan="4" colspan="3">TORBA</th><td>7</td><th rowspan="2" colspan="2">DUDY</th></tr>
-        <tr><td>8</td></tr>
-        <tr><td>9</td><td>10</td><td>11</td></tr>
-        <tr><td>12</td><th colspan="2">KOT</th></tr>
-    </table>
+
+    <div class="table-container">
+        <table>
+            <tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td></tr>
+            <tr><th rowspan="4" colspan="3">TORBA</th><td>7</td><th rowspan="2" colspan="2">DUDY</th></tr>
+            <tr><td>8</td></tr>
+            <tr><td>9</td><td>10</td><td>11</td></tr>
+            <tr><td>12</td><th colspan="2">KOT</th></tr>
+        </table>
+    </div>
+
 </body>
 </html>
