--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20251125_prawko.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1763498037/prawko_ndidvf.png" alt="Prawko">
+                <span>Prawko</span>
+            </a>
             <a href="20251123_verbs.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758823572/verbs_nkbuey.png" alt="Verbs">
                 <span>Verbs</span>
